--- a/html/pages/billing/billing_dashboard.html
+++ b/html/pages/billing/billing_dashboard.html
@@ -35,11 +35,13 @@
                         <a class="nav-link" href="../../pages/appointments/appointment_dashboard.html">Appointments</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../../pages/medicine_inventory/medicine_inventory.html">Medicine
-                            Inventory</a>
+                        <a class="nav-link" href="../../pages/medicine_inventory/medicine_inventory.html">Medicine Inventory</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../../pages/billing/billing_dashboard.html">Billing & Invoice</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../../pages/reports/report_dashboard.html">Reports</a>
                     </li>
                 </ul>
 
@@ -115,7 +117,7 @@
                 </div>
                 <div class="col-12 col-lg-2">
                     <div class="my-3">
-                        <button class="btn btn-primary w-100" onclick="addMedicine()">Add</button>
+                        <button class="btn btn-add w-100" onclick="addMedicine()">Add</button>
                     </div>
                 </div>
             </div>
@@ -158,7 +160,7 @@
                 </div>
                 <div class="col-12 col-lg-2">
                     <div class="my-3">
-                        <button class="btn btn-primary w-100" onclick="addToBill()">Verify Payment</button>
+                        <button class="btn btn-add w-100" onclick="addToBill()">Verify Payment</button>
                     </div>
                 </div>
             </div>
