--- a/html/pages/doctor/doctor_dashboard.html
+++ b/html/pages/doctor/doctor_dashboard.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastr@2.1.4/build/toastr.min.css">
+
     <title>Doctors</title>
     <link rel="stylesheet" href="../../../css/doctor/doctor_dashboard.css">
     <link rel="stylesheet" href="../../../css/main.css">
@@ -36,6 +38,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../../pages/billing/billing_dashboard.html">Billing & Invoice</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../../pages/reports/report_dashboard.html">Reports</a>
                     </li>
                 </ul>
 
@@ -198,7 +203,7 @@
                     <div class="col-12">
                         <div class="mb-3">
                             <label for="doctorMobile" class="form-label">Mobile</label>
-                            <input type="number" class="form-control" id="doctorMobile" placeholder="Mobile">
+                            <input type="tel" class="form-control" id="doctorMobile" placeholder="Mobile">
                         </div>
                     </div>
                     <div class="col-12">
@@ -222,9 +227,11 @@
                             </label>
                         </div>
                     </div>
+                    <div class="col-12 mb-3">
+                        <button class="btn btn-add w-100" onclick="createDoctor()">Add Doctor</button>
+                    </div>
                     <div class="col-12">
-                        <button class="btn btn-primary" onclick="createDoctor()">Add Doctor</button>
-                        <button class="btn btn-secondary" onclick="updateDoctorRecords()">Update Doctor</button>
+                        <button class="btn btn-update w-100" onclick="updateDoctorRecords()">Update Doctor</button>
                     </div>
                 </div>
             </div>
