--- a/html/pages/medicine_inventory/medicine_inventory.html
+++ b/html/pages/medicine_inventory/medicine_inventory.html
@@ -39,6 +39,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="../../pages/billing/billing_dashboard.html">Billing & Invoice</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../../pages/reports/report_dashboard.html">Reports</a>
+                    </li>
                 </ul>
 
             </div>
@@ -71,12 +74,12 @@
                 </div>
                 <div class="col-12 col-lg-2">
                     <div class="my-3">
-                        <input type="datetime-local" class="form-control" id="expireDate">
+                        <input type="date" class="form-control" id="expireDate">
                     </div>
                 </div>
                 <div class="col-12 col-lg-2">
                     <div class="my-3">
-                        <button class="w-100 btn btn-primary" onclick="createMedicine()">Add</button>
+                        <button class="w-100 btn btn-add" onclick="createMedicine()">Add</button>
                     </div>
                 </div>
             </div>
