--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Hospital Management System</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/4b5b83994b.js" crossorigin="anonymous"></script>
+
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -36,6 +38,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#billing">Billing</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#reports">Reports</a>
+                </li>
 
                 <li class="nav-item border px-5">
                     <a class="nav-link " href="html/pages/user/login.html">Sign In</a>
@@ -64,32 +69,38 @@
             <div class="row">
                 <div class="col-12 col-lg-4 service-item-outer">
                     <div class="service-item-inner">
-                        <h3>User Management</h3>
-                    </div>
-                </div>
-                <div class="col-12 col-lg-4 service-item-outer">
-                    <div class="service-item-inner">
+                        <i class="fa-solid fa-hospital-user"></i>
                         <h3>Patient Management</h3>
                     </div>
                 </div>
                 <div class="col-12 col-lg-4 service-item-outer">
                     <div class="service-item-inner">
+                        <i class="fa-solid fa-user-doctor"></i>
                         <h3>Doctor Management</h3>
                     </div>
                 </div>
                 <div class="col-12 col-lg-4 service-item-outer">
                     <div class="service-item-inner">
+                        <i class="fa-solid fa-calendar-check"></i>
                         <h3>Appointment Management</h3>
                     </div>
                 </div>
                 <div class="col-12 col-lg-4 service-item-outer">
                     <div class="service-item-inner">
+                        <i class="fa-solid fa-hospital"></i>
                         <h3>Medicine Inventory Management</h3>
                     </div>
                 </div>
                 <div class="col-12 col-lg-4 service-item-outer">
                     <div class="service-item-inner">
+                        <i class="fa-solid fa-clipboard"></i>
                         <h3>Billing Management</h3>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-4 service-item-outer">
+                    <div class="service-item-inner">
+                        <i class="fa-solid fa-file-pdf"></i>
+                        <h3>Reports Management</h3>
                     </div>
                 </div>
             </div>
@@ -238,6 +249,28 @@
                 </div>
                 <div class="col-12 col-lg-6 left">
                     <div class="billing-management-image"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="section-divider"></div>
+
+<div class="report-management-outer" id="reports">
+    <div class="report-management-inner">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-lg-6 left">
+                    <div class="report-management-image"></div>
+                </div>
+
+                <div class="col-12 col-lg-6 right description">
+                    <h1>Reports Management</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem facere fuga ipsam quae, quasi
+                        quis quisquam temporibus ullam velit? Ab amet dicta distinctio dolorem dolores doloribus ea ex,
+                        fugit id ipsum officia quaerat ratione repellat sapiente sequi temporibus ut voluptatum.</p>
+                    <button class="btn btn-outline-danger"><a href="html/pages/reports/report_dashboard.html">Reports Management</a></button>
                 </div>
             </div>
         </div>
