--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
                     <a class="nav-link" href="#doctor">Doctor</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="#appointment">Appointments</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="#medicine">Medicine Inventory</a>
                 </li>
                 <li class="nav-item">
